# c-core

./: CMakeLists.txt  README.md
include/core/std/: cli.h  error.h  io.h  memory.h  strings.h
include/extension_sdl/std/sdl/: timer.h
include/extension_tests/std/: testing.h
sdl/: CMakeLists.txt  timer.c
std/: CMakeLists.txt  cli.c  error.c  io.c  memory.c  strings.c
std_testing/: CMakeLists.txt  test_runner.c
std_testing/docs/: testing.md
tests/: CMakeLists.txt  memory_tests.c
